--- a/index.html
+++ b/index.html
@@ -14,13 +14,31 @@
 <body class="flex-column min-100-vh">
   <header class="hero">
     <h1 class="app-title"></i> Weather Dashboard</h1>
-    <p>Search for a GitHub user or click on a language to see a list of repositories and how many open issues they have!
+    <p>Search for a location to check the weather
     </p>
   </header>
 
 
   <main class="flex-row justify-space-between">
+    <div class="col-12 col-md-4">
 
+      <div class="card">
+        <h3 class="card-header text-uppercase">Search By City</h3>
+        <form id="user-form" class="card-body">
+          <label class="form-label" for="city">City</label>
+          <input name="city" id="city" type="text" autofocus="true" class="form-input" />
+          <button type="submit" class="btn">Get Weather</button>
+        </form>
+      </div>
+
+
+
+    <div class="col-12 col-md-8">
+      <h2 class="subtitle">Showing Weather for: <span id="location-search-term"></span></h2>
+      <div id="location-container" class="list-group">
+
+      </div>
+    </div>
   </main>
   <script src="./assets/js/homepage.js"></script>
  
