--- a/index.html
+++ b/index.html
@@ -36,9 +36,13 @@
     <div class="col-12 col-md-8">
       <h2 class="subtitle">Showing Weather for: <span id="location-search-term"></span></h2>
       <div id="location-container" class="list-group">
-
-      </div>
+      </div>  
     </div>
+
+    <div class="col-12 col-md-8">
+      <h2 class="subtitle">Weather <span id="location-search-term"></span></h2>
+      <div id="location-container" class="list-group">      </div>  
+
   </main>
   <script src="./assets/js/homepage.js"></script>
  
